# discord-summarizer-rig-blueprint

./: .env.example  Cargo.toml  Dockerfile  README.md  blog.md
scripts/: setup_db.sh
src/: db.rs  lib.rs  llm.rs  main.rs
tests/: e2e.rs
